# Lightning

./: .gitignore  Cargo.toml  README.md  bench.txt  compared_test-final.csv  compared_test.csv  infi-test.sh  lfmap-perf-epoch.csv  lfmap-perf-rc.csv  nohup.out
.github/workflows/: rust.yml
bench/: Cargo.toml  arc_mutex_std.rs  arc_rwlock_std.rs  chashmap.rs  cht.rs  contrie.rs  dashmap.rs  fat_lfmap.rs  flurry.rs  lfmap.rs  lite_lfmap.rs  lite_lfmap_arc.rs  lockfree.rs  mod (Shi’s MacBook Pro's conflicted copy 2021-03-22).rs  mod.rs  nohup.out  obj_lfmap.rs  plot.rs  ptr_lfmap.rs  scc.rs  static data: HashMap<String, Integer>;.java
bench/Result-old/Phi/: .Rhistory
src/: aarc.rs  allocator.rs  counter.rs  deque.rs  lib.rs  linked_map.rs  list.rs  lru_cache.rs  map.rs  obj_alloc.rs  par_list_test_macros.rs  rand.rs  ring_buffer.rs  rw_spin.rs  spin.rs  stack.rs  tests_misc.rs  thread_local.rs  ttl_cache.rs
src/bench/: arc_mutex_std.rs  arc_rwlock_std.rs  chashmap.rs  lfmap.rs  mod.rs
src/map/: base.rs  fat_map.rs  hash_map.rs  hash_set.rs  lite_map.rs  mod.rs  obj_map.rs  ptr_map.rs  tests.rs  word_map.rs
test/bench/: arc_mutex_std.rs  arc_rwlock_std.rs  chashmap.rs  lfmap.rs  mod.rs
