[package]
name = "lightning-containers"
version = "0.2.2"
authors = ["Hao Shi <shisoftgenius@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "A set of lock-free data structures"
repository = "https://github.com/ShisoftResearch/Lightning"
homepage = "https://github.com/ShisoftResearch/Lightning"
categories = ["data-structures", "lock-free", "wait-free"]

[dependencies]
log = "0.4.8"
seahash = "4"
smallvec = "1"
crossbeam-utils = "0.8"
crossbeam-epoch = "0.9"
num_cpus = "1"
libc = "0.2.69" 
parking_lot = "*"
static_assertions = "1"
num = "0.4"


[dev-dependencies]
chashmap = "2.2.2"
page_size = "0.4.2"
env_logger = "0.9"
rayon = "1"
itertools = "0.10"

[lib]
name = "lightning"
path = "src/lib.rs"

[features]
default = []
exchange_backoff = []