[package]
name = "lightning-containers"
version = "0.2.2"
authors = ["Hao Shi <shisoftgenius@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "A set of lock-free data structures"
repository = "https://github.com/ShisoftResearch/Lightning"
homepage = "https://github.com/ShisoftResearch/Lightning"
categories = ["data-structures", "lock-free", "wait-free"]

[dependencies]
log = {version = "0.4", features = ["release_max_level_off"]}
crossbeam-utils = "0.8"
crossbeam-epoch = "0.9"
num_cpus = "1"
libc = "0.2.69" 
parking_lot = "*"
static_assertions = "1"
lazy_static = "1.4.0"
page_size = "0.5"
affinity = "*"
itertools = "0.10"

[dev-dependencies]
chashmap = "2.2.2"
page_size = "0.5"
env_logger = "0.10"
rayon = "1"
itertools = "0.10"

[lib]
name = "lightning"
path = "src/lib.rs"

[features]
default = ["hopsotch"]
exchange_backoff = []
asan = []
hopsotch = []

[profile.test]
opt-level = 0
debug = 2
lto = "off"