[package]
name = "lightning-bench"
version = "0.2.0"
authors = ["Hao Shi <haoshi@umass.edu>"]
edition = "2018"
license-file = "LICENSE"
description = "Bench for lightning"
repository = "https://github.com/ShisoftResearch/Lightning"
homepage = "https://github.com/ShisoftResearch/Lightning"
categories = ["data-structures", "lock-free", "wait-free"]

[dependencies]
lightning-containers = {path = "../"}
tracing-subscriber = {version = "0.2"}
bustle = {path = "../../bustle" }
num_cpus = "1"
chashmap = "2.2.2"
chrono = "0.4"
perfcnt_bench = { git = "https://github.com/shisoft/perfcnt-bench.git" }
perfcnt = "0.7"
cht = "0.4.1"
clap = "3.0.0-beta.2"
plotters = "^0.3.1"
contrie = "0.1"
dashmap = "4"
flurry = "0.3"
lockfree = "0.5"
scc = "0.4"
ipc-channel = "0.15.0"
libc = "*"

[[bin]]
name = "lightning-bench"
path = "mod.rs"