[package]
name = "lightning-bench"
version = "0.2.0"
authors = ["Hao Shi <haoshi@umass.edu>"]
edition = "2018"
license-file = "LICENSE"
description = "Bench for lightning"
repository = "https://github.com/ShisoftResearch/Lightning"
homepage = "https://github.com/ShisoftResearch/Lightning"
categories = ["data-structures", "lock-free", "wait-free"]

[dependencies]
lightning-containers = {path = "../"}
tracing-subscriber = {version = "0.3"}
bustle = {path = "../../bustle" }
num_cpus = "1"
chashmap = "2.2.2"
chrono = "0.4"
perfcnt_bench = { git = "https://github.com/shisoft/perfcnt-bench.git" }
perfcnt = "0.7"
cht = "0.5"
clap = "3"
plotters = "^0.3.1"
contrie = "0.1"
dashmap = "5"
flurry = "0.4"
lockfree = "0.5"
scc = "0.6"
ipc-channel = "0.15.0"
libc = "*"
humansize = "1"

[target.'cfg(target_os = "linux")'.dependencies]
procinfo = "0.4"


[[bin]]
name = "lightning-bench"
path = "mod.rs"