[package]
name = "lightning-bench"
version = "0.2.0"
authors = ["Hao Shi <haoshi@umass.edu>"]
edition = "2018"
license-file = "LICENSE"
description = "Bench for lightning"
repository = "https://github.com/ShisoftResearch/Lightning"
homepage = "https://github.com/ShisoftResearch/Lightning"
categories = ["data-structures", "lock-free", "wait-free"]

[dependencies]
lightning-containers = {path = "../"}
tracing-subscriber = {version = "0.3"}
bustle = { git = "https://github.com/ShisoftResearch/bustle.git" }
num_cpus = "1"
chashmap = "2.2.2"
chrono = "0.4"
perfcnt_bench = { git = "https://github.com/shisoft/perfcnt-bench.git" }
perfcnt = "0.8"
cht = "0.5"
clap = "3"
plotters = "^0.3.1"
contrie = "0.1"
dashmap = "5"
flurry = "0.4"
lockfree = "0.5"
scc = "0.11"
ipc-channel = "0.16.0"
libc = "*"
humansize = "2"
log = {version = "0.4", features = ["max_level_off", "release_max_level_off"]}

[profile.release]
debug = true

[target.'cfg(target_os = "linux")'.dependencies]
procinfo = "0.4"


[[bin]]
name = "lightning-bench"
path = "mod.rs"

[features]
unsafe_bench = []